--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "^0.71.7",
     "react-native-animatable": "^1.3.3",
-    "react-native-web": "~0.18.11"
+    "react-native-web": "~0.18.11",
+    "undefined": "@expo/webáck-config"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
